# myStructure

./: .gitignore  LICENSE  README.md  pyproject.toml
src/myStructure/: example.py  structure.py
src/myStructure/structures/: Fe_afm_bcc.mcif  Fe_bcc.mcif  Ge.cif
